# MARV-FC

./: .gitattributes  .gitignore  Cargo.toml  README.md  memory.x  testing.md
common/: Cargo.toml
common/src/: commands.rs  config.rs  lib.rs  log_config.rs  params.rs  test_helpers.rs
common/src/comms/: mod.rs
common/src/comms/bridge/: mod.rs
common/src/comms/links/: mod.rs
common/src/comms/retry/: mod.rs
common/src/comms/routing/: mod.rs
common/src/comms/session/: mod.rs
common/src/coms/: mod.rs  scheduler.rs  uart_coms.rs  usb_cdc.rs
common/src/coms/transport/: mod.rs  uart.rs  uart_packet.rs
common/src/control/: config.rs  mod.rs  pipeline.rs
common/src/control/altitude/: mod.rs
common/src/control/attitude/: mod.rs
common/src/control/guidance/: mod.rs
common/src/control/mixing/: mod.rs
common/src/control/outputs/: mod.rs
common/src/control/position/: mod.rs
common/src/control/rate/: mod.rs
common/src/drivers/: adxl375.rs  bmi088.rs  bmm350.rs  bmp388.rs  bmp390.md  bmp390.rs  bmp581.rs  dshot.rs  lsm6dsv32x.rs  mod.rs  mpu6050.rs  neom9n.rs  pressure_transducer.rs  radiogs.md  servo.rs  sx1262.md  sx1262.rs  sx1262old.md  troubleshoot.md
common/src/drivers/gnss/: mod.rs  ublox_m10.rs
common/src/drivers/leds/: mod.rs
common/src/drivers/radio/: mod.rs
common/src/drivers/sensors/: mod.rs
common/src/drivers/storage/: microsd.rs  mod.rs
common/src/estimators/: ekf.rs
common/src/filters/: pid.rs
common/src/interfaces/: mod.rs
common/src/interfaces/actuators/: mod.rs
common/src/interfaces/comms/: mod.rs
common/src/interfaces/health/: mod.rs
common/src/interfaces/sensors/: mod.rs
common/src/interfaces/storage/: logging.rs  mod.rs
common/src/interfaces/system/: mod.rs
common/src/interfaces/timing/: mod.rs
common/src/localization/: mod.rs
common/src/localization/attitude/: mod.rs
common/src/localization/calibration/: mod.rs
common/src/localization/estimation/: ARCHITECTURE.md  mod.rs
common/src/localization/navigation/: mod.rs
common/src/localization/sensor_fusion/: mod.rs
common/src/localization/state/: mod.rs
common/src/lora/: link.rs  lora_config.rs  mod.rs
common/src/mavlink2/: handlers.rs  integration_example.rs  mod.rs  msg.rs  param_handler.rs
common/src/messages/: mod.rs
common/src/messages/control/: mod.rs
common/src/messages/estimate/: mod.rs
common/src/messages/fault/: health_report.rs  mod.rs  reset_reason.rs  watchdog_status.rs
common/src/messages/logging/: mod.rs  runtime.rs  sdcard.rs
common/src/messages/runtime/: mod.rs
common/src/messages/sensor/: mod.rs
common/src/messages/telemetry/: mod.rs
common/src/policies/: fc_state.rs  mod.rs
common/src/policies/arming/: mod.rs
common/src/policies/failsafe/: mod.rs
common/src/policies/faults/: escalation.rs  mod.rs  reset_policy.rs
common/src/policies/mission/: mod.rs
common/src/policies/modes/: init.rs  mod.rs
common/src/prelude/: mod.rs
common/src/protocol/: mod.rs  packet.rs
common/src/protocol/crc/: mod.rs
common/src/protocol/framing/: mod.rs
common/src/protocol/hilink/: mod.rs  rf.rs
common/src/protocol/mavlink/: encode.rs  handlers.rs  link_authority.rs  link_mac_config.rs  link_metrics.rs  mod.rs  param_handler.rs  prelude.rs  rf_reconfig.rs  telemetry.rs  transport_lora.rs  transport_uart.rs
common/src/protocol/packet_types/: mod.rs
common/src/protocol/ubx/: mod.rs
common/src/sd/: mod.rs  spi.rs  store.rs
common/src/services/: mod.rs
common/src/services/acquisition/: barometer_service.rs  imu_cluster_service.rs  imu_producer.rs  magnetometer_service.rs  mavlink_hil.rs  mod.rs  pressure_transducer_service.rs  sample_channels.rs  spi1_imu_service.rs
common/src/services/control/: mod.rs
common/src/services/estimation/: mod.rs
common/src/services/health/: deadlines.rs  fault_aggregation.rs  liveness.rs  mod.rs  tasks.rs  watchdog_supervisor.rs
common/src/services/hil/: backend.rs  boot.rs  egress.rs  events.rs  frame_adapter.rs  ingress.rs  mod.rs  model.rs  routing.rs  runtime.rs  tasks.rs
common/src/services/logging/: mod.rs  sd_queue.rs  sensor_snapshot.rs
common/src/services/status/: mod.rs
common/src/services/telemetry/: mavlink_stream.rs  mod.rs
common/src/tasks/: coms.rs  mixer.rs  mod.rs  radio.rs  sd.rs  sensors.rs
common/src/tasks/background/: mission.rs  mod.rs  sd_logging.rs
common/src/tasks/fast_loop/: mod.rs  (+1 more)
common/src/telemetry/: mod.rs  producer.rs  scheduler.rs
common/src/types/: mod.rs
common/src/utilities/: mod.rs
common/src/utils/: delay.rs  i2cscanner.rs  mod.rs  sd.rs  sd_params.rs
common/tests/: control_pipeline.rs  estimation_replay.rs
device/MARV-FC-SP-RP2354B/: Cargo.toml  build.rs
device/MARV-FC-SP-RP2354B/src/: buses.rs  channels.rs  config.rs  core0.rs  core1.rs  interrupts.rs  main.rs  pinmap.rs  radio_link.rs  resources.rs  spi1_sensor_cluster.rs  status_led.rs  storage.rs  usb_cdc.rs  watchdog.rs
device/MARV-RADIO-RP2354A/: Cargo.toml  hardware.md
device/MARV-RADIO-RP2354A/src/: buses.rs  channels.rs  config.rs  core0.rs  core1.rs  interrupts.rs  lora_bridge.rs  lora_demo.rs  main.rs  pinmap.rs  resources.rs  status_indicator.rs  status_led.rs  watchdog.rs
device/RECOVERY-ALTIMETER-RP2350/: Cargo.toml
device/RECOVERY-ALTIMETER-RP2350/src/: buses.rs  channels.rs  config.rs  core0.rs  core1.rs  main.rs  pinmap.rs  resources.rs  usb_cdc.rs  watchdog.rs
device/RP235X-BASE/: Cargo.toml
device/RP235X-BASE/src/: clocks.rs  lib.rs  pio_uart.rs  status_led.rs  storage.rs  usb_cdc.rs  watchdog.rs
device/rp235x/: Cargo.toml
device/rp235x/src/: app.rs  core1.rs  core2.rs  main.rs  telemetry-presets.rs
simulator/: Cargo.toml
simulator/src/: api.rs  app.rs  config.rs  fs_access.rs  fs_logger.rs  main.rs  mavlink.rs  sim_loop.rs  state.rs  tx_actuator.rs  types.rs  ui.rs  ws.rs
simulator/ui/: app.js  index.html  styles.css
telemetry-app/gazebo_bridge/: CMakeLists.txt  README.md
telemetry-app/gazebo_bridge/config/: bridge_config  bridge_config.example
telemetry-app/gazebo_bridge/src/: bridge.cpp  tcp_server.cpp
(+344 files in other folders)
