[workspace]
members = [
    "common",
    "device/rp235x",
    "simulator",
]
resolver = "3"

# Build only host-friendly members by default. Device targets should be built explicitly.
default-members = [
    "common",
    "simulator",
]

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
