[workspace]
members = [
    "common",
    "device/MARV-FC-RL-RP2354B",
    "device/MARV-FC-SP-RP2354B",
    "device/PAYLOAD-CONTROLLER-RP2350",
    "device/RECOVERY-ALTIMETER-RP2350",
    "device/RP235X-BASE",
    "device/RP2354B-CROSSCORE-TESTS",
    "device/RP235X-TEST",
    "simulator",
]
resolver = "3"

# Build only host-friendly members by default. Device targets should be built explicitly.
default-members = [
    "common",
    "simulator",
]

[profile.release]
# Optimize for size (embedded firmware)
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"

# Keep full DWARF debuginfo so probe-rs can show file/line locations in RTT logs.
# Note: DWARF/debug sections are not flashed, so this does not increase programmed size.
debug = 2

# Helps ensure consistent, smaller builds.
incremental = false
