[package]
name = "common"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
embedded-hal = "1.0"
micromath = "2.1"
defmt = "1.0.1"
embedded-hal-async = "1.0"
mavio = { version = "0.5", default-features = false, features = ["dlct-common"] }
heapless = { version = "0.8", features = ["defmt-03"] }

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
