[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common", default-features = false }
rand = "0.8"
nalgebra = "0.33"
poem = { version = "1.3", features = ["websocket"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
