[package]
name = "marv-fc-sp-rp2354b"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[features]
default = []
hil-sensor-backend = []

[dependencies]
common = { path = "../../common" }
rp235x-base = { path = "../RP235X-BASE", features = ["rp235xb"] }
cortex-m-rt = "0.7.0"
embassy-sync = "0.7.2"
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "time-driver", "critical-section-impl", "rp235xb", "binary-info", "imagedef-none"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal-async = "1.0"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/examples/marv-fc-sp-rp2354b" }
]
