[package]
name = "marv-radio-rp2354a"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[features]
default = ["radio"]
radio = []
ground-station = []

[dependencies]
common = { path = "../../common" }
rp235x-base = { path = "../RP235X-BASE", features = ["rp235xa"] }
cortex-m-rt = "0.7.0"
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "time-driver", "critical-section-impl", "rp235xa", "binary-info", "imagedef-none"] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = "0.6.1"
static_cell = "2.1.1"

defmt = "1.0.1"
defmt-rtt = { version = "1.0.0", features = ["disable-blocking-mode"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/examples/marv-radio-rp2354a" }
]
