[package]
name = "rp235x-base"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
rp235xa = ["embassy-rp/rp235xa"]
rp235xb = ["embassy-rp/rp235xb"]

[dependencies]
common = { path = "../../common" }
defmt = "1.0.1"
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "time-driver", "critical-section-impl", "binary-info", "imagedef-none"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = "0.5.1"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = "0.2"
embedded-sdmmc = { version = "0.7.0", default-features = false, features = ["defmt-log"] }
embassy-sync = "0.7.2"
fixed = "1.29.0"
smart-leds = "0.4"
static_cell = "2.1.1"
